<resources>
    <string name="app_name">Mobile Mechanical Keyboard</string>
    <string name="esc_key">TECLA ESC</string>
    <string name="interruptor">INTERRUPTOR</string>
    <string name="guardado">Guardado</string>
    <string name="key_font">FUENTE TECLAS</string>
    <string name="font_text_example">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="practice">Probar</string>
    <string name="habilitar">Habilitar</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="probar">Probar</string>
    <string name="oraciondeprueba">
        esta oracion solo sirve de muestra para ver si se pueden comparar los textos
    </string>
    <string name="ayuda"><u>Ayuda</u></string>
    <string name="ok">OK</string>
    <string name="textoayuda">Si estas teniendo problemas con la configuración del teclado en tu dispositivo, consulta
    la forma de habilitar y seleccionar teclados virtuales en la versiona de Android que tiene tu dispositivo,
    en cada version es diferente. Si no puedes ver la teclas, desactiva el modo oscuro.</string>

    <string-array name="array_fonts">
        <item>adam.ttf</item>
        <item>cinzel.ttf</item>
        <item>iniya.otf</item>
        <item>megrim.ttf</item>
        <item>melted.ttf</item>
        <item>ming.TTF</item>
        <item>montserrat.ttf</item>
        <item>oneday.otf</item>
        <item>comfortaa.ttf</item>
        <item>orbitron.ttf</item>
        <item>spirits.ttf</item>
        <item>true.ttf</item>
    </string-array>
    <string-array name="array_switches">
        <item>CHERRY MX RED</item>
        <item>CHERRY MX BLACK</item>
        <item>CHERRY MX BLUE</item>
        <item>CHERRY MX BROWN</item>
        <item>HOLY PANDA</item>
        <item>GATERON BLACK INK</item>
        <item>GATERON RED INK</item>
        <item>NOVELKEYS CREAM</item>
    </string-array>
    <string-array name="array_switches_sound">
        <item>cherry_red_</item>
        <item>cherry_black_</item>
        <item>cherry_mx_blue_</item>
        <item>cherry_mx_browns_</item>
        <item>holy_panda_</item>
        <item>gateron_black_inks_</item>
        <item>gateron_red_inks_</item>
        <item>novelkeys_cream_</item>
    </string-array>
    <string-array name="array_esc_key">
        <item>Esc</item>
        <item>₪</item>
        <item>₻</item>
        <item>⅄</item>
        <item>∅</item>
        <item>∞</item>
        <item>☂</item>
        <item>☃</item>
        <item>♫</item>
        <item>★</item>
        <item>⚔</item>
        <item>⛏</item>
        <item>⚅</item>
        <item>♠</item>
        <item>⚜</item>
        <item>⚽</item>
        <item>⚾</item>
        <item>⚰</item>
        <item>☊</item>
        <item>∴</item>
        <item>†</item>
        <item>⚡</item>
        <item>⚝</item>
        <item>▣</item>
        <item>◈</item>
        <item>◍</item>
        <item>◎</item>
        <item>◓</item>
        <item>◧</item>
        <item>◪</item>
        <item>◬</item>
        <item>◰</item>
        <item>☏</item>
        <item>☘</item>
        <item>☠</item>
        <item>☢</item>
        <item>☣</item>
        <item>🌀</item>
        <item>♕</item>
        <item>♔</item>
        <item>☮</item>
        <item>☯</item>
        <item>☸</item>
        <item>☹</item>
        <item>♥</item>
        <item>🌈</item>
        <item>🌵</item>
        <item>⛵</item>
        <item>⚓</item>
        <item>🌹</item>
        <item>🌋</item>
        <item>🌎</item>
        <item>🌙</item>
        <item>🌠</item>
        <item>🌈</item>
        <item>🌭</item>
        <item>🌮</item>
        <item>🌷</item>
        <item>🍄</item>
        <item>🍌</item>
        <item>🍒</item>
        <item>🍓</item>
        <item>🍔</item>
        <item>🥜</item>
        <item>🍕</item>
        <item>🥞</item>
        <item>🍟</item>
        <item>☕</item>
        <item>🚬</item>
        <item>🎃</item>
        <item>🎧</item>
        <item>🎮</item>
        <item>🎩</item>
        <item>🎱</item>
        <item>🎲</item>
        <item>🚽</item>
        <item>🐌</item>
        <item>🐇</item>
        <item>🐒</item>
        <item>🐙</item>
        <item>🦀</item>
        <item>🐲</item>
        <item>🐍</item>
        <item>👻</item>
        <item>👽</item>
        <item>💀</item>
        <item>🤖</item>
        <item>💣</item>
        <item>🔫</item>
        <item>💲</item>
        <item>🔥</item>
        <item>📎</item>
        <item>💎</item>
        <item>💩</item>
        <item>💕</item>
        <item>㊗</item>
        <item>㊙</item>
        <item>🈶</item>
        <item>🈸</item>
        <item>Ψ</item>
        <item>ξ</item>
        <item>ω</item>
        <item>Ж</item>
        <item>☬</item>
        <item>🔱</item>
        <item>🗺</item>
        <item>🗽</item>
        <item>🗿</item>
        <item>😎</item>
        <item>🚀</item>
        <item>🚂</item>
        <item>🥊</item>
    </string-array>
</resources>